--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6.3",
     "react-scripts": "5.0.1",
