--- a/server/package.json
+++ b/server/package.json
@@ -8,5 +8,10 @@
     "start": "node server.js"
   },
   "author": "Allan Lalangan",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.5"
+  }
 }
