--- a/server/package.json
+++ b/server/package.json
@@ -12,15 +12,11 @@
   "dependencies": {
     "axios": "^1.1.2",
     "bcryptjs": "^2.4.3",
-    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
-    "mongoose": "^6.6.5",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0"
+    "mongoose": "^6.6.5"
   }
 }
